fix blurry background

--- a/nobody-knows/src/assets/styles/index.scss
+++ b/nobody-knows/src/assets/styles/index.scss
@@ -31,8 +31,8 @@ code {
 
   background-image: url('https://zayland-assets.s3.amazonaws.com/images/blank_background.png');
   background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+
+  background-repeat: repeat;
 }
 
 .rotate {
